infrastructure-platform/kubernetes/base/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  namespace: application
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - host: app.sample.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: sample-app
                port:
                  number: 80
